# exact

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
afh/: CMakeLists.txt
afh/chain/: CMakeLists.txt  free_energy_finite.cpp  free_energy_finite.ip  free_energy_finite.op  heisenberg.hpp
afh/free_energy/: CMakeLists.txt  chain.hpp  chain_finite.cpp  chain_finite.hpp  chain_finite_gt.cpp
boost/math/quadrature/detail/: tanh_sinh_detail.hpp
cmake/: add_iotest.cmake  lattice.cmake  standards.cmake  use-exact.cmake
config/: core.cmake  exact-config.cmake.in  run_iotest.cmake  use-exact.cmake
exact/ising/square/: free_energy_finite.hpp
exact/ising/triangle/: free_energy.hpp
exact/lse/: exp_number.hpp
gallery/: CMakeLists.txt
gallery/ising-square-tc/: CMakeLists.txt  plot.py  run.sh.in
include/: simpson_integration.h
integral/: CMakeLists.txt  simpson.cpp  simpson.hpp
ising/: CMakeLists.txt  counting.hpp  mp_wrapper.hpp
ising/dos/: CMakeLists.txt  options.hpp  square.hpp  square_count.cpp  square_count_gt.cpp  square_finite.cpp  square_finite_gt.cpp
ising/free_energy/: CMakeLists.txt  common.hpp  options.hpp  square.cpp  square.hpp  square_count.cpp  square_count.hpp  square_count_gt.cpp  square_count_tc.cpp  square_finite.cpp  square_finite_gt.cpp  square_finite_tc.cpp  square_gt.cpp  square_tm.cpp  square_tm.hpp  square_tm_gt.cpp  triangular.cpp  triangular.hpp
ising/square/: CMakeLists.txt  README.txt  counting.hpp  finite.hpp  free_energy.cpp  free_energy.h  free_energy.hpp  free_energy.ip  free_energy.op  free_energy_finite.cpp  free_energy_finite.h  free_energy_finite.hpp  free_energy_finite.ip  free_energy_finite.op  transfer_matrix.hpp
ising/tc/: CMakeLists.txt  hexagonal.cpp  hexagonal.hpp  hexagonal_gt.cpp  options.hpp  square.cpp  square.hpp  triangular.cpp  triangular.hpp
ising/triangle/: CMakeLists.txt  README.txt  free_energy.cpp  free_energy.h  free_energy.hpp  free_energy.ip  free_energy.op
lattice/: README.md  chain.hpp  cubic.hpp  fully_connected.hpp  simple_cubic.hpp  square.hpp
log_sum_exp/: CMakeLists.txt  exp_number.cpp  exp_number.hpp  exp_number.op
lse/: exp_number.hpp
standards/: exp_number.hpp  newton.hpp  simpson.hpp
test/: CMakeLists.txt
test/afh/: CMakeLists.txt
test/afh/chain/: free_energy_finite.cpp
test/afh/free_energy/: CMakeLists.txt  chain_finite.cpp  free_energy_finite.op
test/ising/: CMakeLists.txt
test/ising/free_energy/: CMakeLists.txt  square.cpp
test/ising/square/: CMakeLists.txt  README.md  counting_list.cpp  counting_list.ip  counting_list.op  counting_mag.cpp  counting_mag.op  counting_uniform.cpp  counting_uniform.ip  free_energy.cpp  free_energy.op  free_energy_finite.cpp  free_energy_finite.op  transfer_matrix.cpp  transfer_matrix.op  transfer_matrix_list.cpp  transfer_matrix_list.op  transfer_matrix_uniform.cpp  transfer_matrix_uniform.ip  transfer_matrix_uniform.op
test/ising/tc/: CMakeLists.txt  square.cpp  triangular.cpp
test/ising/triangle/: CMakeLists.txt  free_energy.cpp  free_energy.op
tfi/energy/: CMakeLists.txt  chain.cpp  chain.hpp  chain_gt.cpp  convert.hpp  options.hpp
