if(ALPS_VERSION)
  set(PROGS free_energy_finite)

  foreach(name ${PROGS})
    set(target_name afh_chain_${name})
    add_executable(${target_name} ${name}.cpp)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name} ${ALPS_LIBRARIES})
    add_iotest(${name})
  endforeach(name)
endif(ALPS_VERSION)
