set(PF ising_dos)

set(PROGS square_count square_finite)
foreach(name ${PROGS})
  set(target_name ${PF}_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} lattice Eigen3::Eigen Boost::boost)
endforeach(name)

set(PROGS square_count_gt square_finite_gt)
foreach(name ${PROGS})
  set(target_name ${PF}_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} lattice Eigen3::Eigen Boost::boost gtest_main)
  add_test(${target_name} ${name})
endforeach(name)
