set(PF ising_tc)

set(PROGS hexagonal square triangular)
foreach(name ${PROGS})
  set(target_name ${PF}_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} standards Boost::boost)
endforeach(name)

set(PROGS hexagonal_gt square_gt triangular_gt)
foreach(name ${PROGS})
  set(target_name ${PF}_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} standards Boost::boost gtest_main)
  add_test(${target_name} ${name})
endforeach(name)
